--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">密钥认证</string>
+    <string name="hide_serialnumber">隐藏序列号</string>
     <string name="use_shizuku">使用 Shizuku</string>
     <string name="use_sak">使用 Knox 认证</string>
     <string name="use_strongbox">使用安全模块</string>
